solved file not found error. Hacky fix